# idle-dungeoneering

./: .gitignore  Cargo.toml  Dioxus.toml  justfile
src/: main.rs
src/backend/: bevy_scene_plugin.rs  mod.rs  sphere.rs
src/backend/base_plugin/: mod.rs
src/backend/idle_time_plugin/: mod.rs
src/frontend/: mod.rs  ui.css  ui.rs
src/frontend/chart/: grid.rs  line.rs  mod.rs  utils.rs
