[package]
name = "idle-dungeoneer"
version = "0.1.0"
authors = ["Eoghan West <eowest@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop", "bevy/default"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
headless_ci = [
	"bevy/bevy_ci_testing",
	"bevy/android-game-activity",
	"bevy/android_shared_stdcxx",
	"bevy/animation",
	"bevy/async_executor",
	"bevy/bevy_anti_alias",
	"bevy/bevy_asset",
	"bevy/bevy_audio",
	"bevy/bevy_camera",
	"bevy/bevy_color",
	"bevy/bevy_core_pipeline",
	"bevy/bevy_gilrs",
	"bevy/bevy_gizmos",
	"bevy/bevy_gltf",
	"bevy/bevy_image",
	"bevy/bevy_input_focus",
	"bevy/bevy_light",
	"bevy/bevy_log",
	"bevy/bevy_mesh",
	"bevy/bevy_mesh_picking_backend",
	"bevy/bevy_pbr",
	"bevy/bevy_picking",
	"bevy/bevy_post_process",
	"bevy/bevy_render",
	"bevy/bevy_scene",
	"bevy/bevy_shader",
	"bevy/bevy_sprite",
	"bevy/bevy_sprite_picking_backend",
	"bevy/bevy_sprite_render",
	"bevy/bevy_state",
	"bevy/bevy_text",
	"bevy/bevy_ui",
	"bevy/bevy_ui_picking_backend",
	"bevy/bevy_ui_render",
	"bevy/bevy_window",
	"bevy/bevy_winit",
	"bevy/custom_cursor",
	"bevy/debug",
	"bevy/default_font",
	"bevy/hdr",
	"bevy/ktx2",
	"bevy/multi_threaded",
	"bevy/png",
	"bevy/reflect_auto_register",
	"bevy/smaa_luts",
	"bevy/std",
	"bevy/sysinfo_plugin",
	"bevy/tonemapping_luts",
	"bevy/vorbis",
	"bevy/wayland",
	"bevy/webgl2",
	"bevy/x11",
	"bevy/zstd_rust",
]

# cargo keeps rm'ing this so copy paste this when it does
# [profile.dev.package.wgpu-types]
# debug-assertions = false

[profile.dev.package.wgpu-types]
debug-assertions = false

[dependencies]
bevy = { version = "0.17", features = ["png"], default-features=false }
bevy_common_assets = { version = "0.14", features = ["json", "ron", "toml"] }
bevy_dioxus_hooks = { git = "https://github.com/rydb/bevy_dioxus_sync", version = "0.1.0", branch = "crossdom_signal" }
bevy_dioxus_sync = { git = "https://github.com/rydb/bevy_dioxus_sync", version = "0.1.0", branch = "crossdom_signal" }
bevy_dioxus_interop = { git = "https://github.com/rydb/bevy_dioxus_sync", version = "0.1.0", branch = "crossdom_signal" }
dioxus = { version = "0.7.1", features = ["default"] }
dioxus-logger = "0.7"
dioxus-native = { version = "0.7", features = ["default"] }
noise = { version = "0.9.0", features = ["std"] }
rand = "0.9.2"
# the bellow iyes_progress dep causes the compilation of stylo@0.8.0 to fail for unknown reasons.
# iyes_progress = { version = "0.15", features = ["assets", "async", "debug"] }
rustc-hash = { version = "2.1.1", features = ["nightly"] }
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.29", features = ["std"] }

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# # Compile the entire crate as one unit.
# # Slows compile times, marginal improvements.
# codegen-units = 1
# # Do a second optimization pass over the entire program, including dependencies.
# # Slows compile times, marginal improvements.
# lto = "thin"
